--- a/source/technology.html
+++ b/source/technology.html
@@ -73,30 +73,30 @@
           <button class="button technology__button" type="button"><svg class="technology__button-image" width="40" height="40"><use xlink:href="img/sprite.svg#icon-magnifier"></use></svg><span class="visually-hidden">Увеличить</span></button>
           <ul class="technology__list swiper-wrapper">
             <li class="technology__item swiper-slide">
-              <p class="technology__item-image-container">
+              <figure class="technology__item-image-container">
                 <img class="technology__item-image" src="img/VR-glasses.png" width="428" height="220" alt="VR-очки">
-              </p>
+              </figure>
               <h2 class="technology__item-title">Masters Glass VR-iii</h2>
               <p class="technology__item-text">Используем только оригинальные импортные VR-очки. Технологии протестированы и безопасны для глаз. Напряжение во время просмотра — как при прогулке за счёт качественного обёъмного  изображения.</p>
             </li>
             <li class="technology__item swiper-slide">
-              <p class="technology__item-image-container">
+              <figure class="technology__item-image-container">
                 <img class="technology__item-image" src="img/VR-glasses.png" width="428" height="220" alt="VR-очки">
-              </p>
+              </figure>
               <h2 class="technology__item-title">Безопасность</h2>
               <p class="technology__item-text">Зритель всегда находится в центре зала, и четко зафиксирован в пространстве, что делает просмотр понятным и комфортным. Технология виртуальной реальности не портит зрение, а эффект присутсвтия развивает креативность и пространственное мышление.</p>
             </li>
             <li class="technology__item swiper-slide">
-              <p class="technology__item-image-container">
+              <figure class="technology__item-image-container">
                 <img class="technology__item-image" src="img/VR-glasses.png" width="428" height="220" alt="VR-очки">
-              </p>
+              </figure>
               <h2 class="technology__item-title">Оборудование</h2>
               <p class="technology__item-text">Все фильмы воспроизводятся при помощи встроенных в очки экранов мобильных телефонов ведущих брендов. Наши техники привезут всё обордуование с собой: от вас нужно лишь помещение для урока.</p>
             </li>
             <li class="technology__item swiper-slide">
-              <p class="technology__item-image-container">
+              <figure class="technology__item-image-container">
                 <img class="technology__item-image" src="img/VR-glasses.png" width="428" height="220" alt="VR-очки">
-              </p>
+              </figure>
               <h2 class="technology__item-title">Система крепления</h2>
               <p class="technology__item-text">Подходит под любой размер головы, даже для первоклассника. Во время просмотра не получится навредить голове ребёнка за счёт тщательно проработанной конструкции очков.</p>
             </li>
