--- a/source/explanation.html
+++ b/source/explanation.html
@@ -61,64 +61,62 @@
       </div>
     </header>
 
-    <main class="page-main">
-      <section class="explanation">
-        <h1 class="explanation__title">Как это работает?</h1>
-        <div class="swiper-container js-slider-mobile">
-          <div class="explanation__list swiper-wrapper">
-            <div class="explanation__item explanation__item--active swiper-slide">
-              <div class="explanation__column-image">
-                <img src="img/explanation-bg-1.jpg" width="195" height="130" alt="Готовим инвентарь">
-              </div>
-              <div class="explanation__column-text">
-                <h2 class="explanation__item-title">Готовим инвентарь</h2>
-                <p class="explanation__item-text">Наши специалисты готовят каждые VR-очки к использованию, обрабатывая устройства специальным средством для ухода после каждого сеанса.</p>
-              </div>
+    <main class="page-main explanation">
+      <h1 class="explanation__title">Как это работает?</h1>
+      <div class="swiper-container js-slider-mobile">
+        <div class="explanation__list swiper-wrapper">
+          <div class="explanation__item explanation__item--active swiper-slide">
+            <div class="explanation__column-image">
+              <img src="img/explanation-bg-1.jpg" width="195" height="130" alt="Готовим инвентарь">
             </div>
-
-            <div class="explanation__item swiper-slide">
-              <div class="explanation__column-image">
-                <img src="img/explanation-bg-2.jpg" width="195" height="130" alt="Выбираем фильм">
-              </div>
-              <div class="explanation__column-text">
-                <h2 class="explanation__item-title">Выбираем фильм</h2>
-                <p class="explanation__item-text">В нашем архиве есть образовательные фильмы по теме космоса, астрологии и обществознания. Мы работаем с самым крупным производителем мультимедиа продуктов в РФ.</p>
-              </div>
-            </div>
-
-            <div class="explanation__item swiper-slide">
-              <div class="explanation__column-image">
-                <img src="img/explanation-bg-3.jpg" width="195" height="130" alt="Надеваем VR-очки">
-              </div>
-              <div class="explanation__column-text">
-                <h2 class="explanation__item-title">Надеваем VR-очки</h2>
-                <p class="explanation__item-text">Ученики получают VR-очки, наш техник помогает им разобраться как правильно надеть очки и закрепить их на голове. Для ребят со зрением, отличным от 100%, техник настраивает диоптрии.</p>
-              </div>
-            </div>
-
-            <div class="explanation__item swiper-slide">
-              <div class="explanation__column-image">
-                <img src="img/explanation-bg-4.jpg" width="195" height="130" alt="Исследуем галактики">
-              </div>
-              <div class="explanation__column-text">
-                <h2 class="explanation__item-title">Исследуем галактики!</h2>
-                <p class="explanation__item-text">Ребята окунаются в виртуальные миры и с удовольтсием изучают всё вокруг. После показа остаются яркие эмоции и запоминаются важные моменты о планетах, звёздах и галактике.</p>
-              </div>
+            <div class="explanation__column-text">
+              <h2 class="explanation__item-title">Готовим инвентарь</h2>
+              <p class="explanation__item-text">Наши специалисты готовят каждые VR-очки к использованию, обрабатывая устройства специальным средством для ухода после каждого сеанса.</p>
             </div>
           </div>
 
-          <div class="explanation__slider-container slider">
-            <div class="slider__pagination swiper-pagination"></div>
-
-            <div class="slider__buttons">
-              <button class="slider__button slider__button--prev swiper-button-prev" type="button"><span class="visually-hidden">Назад</span></button>
-              <button class="slider__button slider__button--next swiper-button-next" type="button"><span class="visually-hidden">Вперед</span></button>
-              <span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span>
+          <div class="explanation__item swiper-slide">
+            <div class="explanation__column-image">
+              <img src="img/explanation-bg-2.jpg" width="195" height="130" alt="Выбираем фильм">
+            </div>
+            <div class="explanation__column-text">
+              <h2 class="explanation__item-title">Выбираем фильм</h2>
+              <p class="explanation__item-text">В нашем архиве есть образовательные фильмы по теме космоса, астрологии и обществознания. Мы работаем с самым крупным производителем мультимедиа продуктов в РФ.</p>
             </div>
           </div>
 
+          <div class="explanation__item swiper-slide">
+            <div class="explanation__column-image">
+              <img src="img/explanation-bg-3.jpg" width="195" height="130" alt="Надеваем VR-очки">
+            </div>
+            <div class="explanation__column-text">
+              <h2 class="explanation__item-title">Надеваем VR-очки</h2>
+              <p class="explanation__item-text">Ученики получают VR-очки, наш техник помогает им разобраться как правильно надеть очки и закрепить их на голове. Для ребят со зрением, отличным от 100%, техник настраивает диоптрии.</p>
+            </div>
+          </div>
+
+          <div class="explanation__item swiper-slide">
+            <div class="explanation__column-image">
+              <img src="img/explanation-bg-4.jpg" width="195" height="130" alt="Исследуем галактики">
+            </div>
+            <div class="explanation__column-text">
+              <h2 class="explanation__item-title">Исследуем галактики!</h2>
+              <p class="explanation__item-text">Ребята окунаются в виртуальные миры и с удовольтсием изучают всё вокруг. После показа остаются яркие эмоции и запоминаются важные моменты о планетах, звёздах и галактике.</p>
+            </div>
+          </div>
         </div>
-      </section>
+
+        <div class="explanation__slider-container slider">
+          <div class="slider__pagination swiper-pagination"></div>
+
+          <div class="slider__buttons">
+            <button class="slider__button slider__button--prev swiper-button-prev" type="button"><span class="visually-hidden">Назад</span></button>
+            <button class="slider__button slider__button--next swiper-button-next" type="button"><span class="visually-hidden">Вперед</span></button>
+            <span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span>
+          </div>
+        </div>
+
+      </div>
 
       <div class="scroll">
         <a class="scroll__link scroll__link-arrow" href="technology.html"><span class="visually-hidden">Скролл вниз</span></a>
