--- a/source/technology.html
+++ b/source/technology.html
@@ -63,7 +63,7 @@
     </header>
 
     <main class="page-main">
-      <section class="technology">
+      <div class="technology">
         <h1 class="technology__title">VR-технология</h1>
 
         <div class="swiper-container js-slider-tablet">
@@ -112,7 +112,7 @@
             </div>
           </div>
         </div>
-      </section>
+      </div>
 
       <div class="scroll">
         <a class="scroll__link scroll__link-arrow" href="questions.html"><span class="visually-hidden">Скролл вниз</span></a>
