--- a/source/contacts.html
+++ b/source/contacts.html
@@ -62,48 +62,50 @@
       </div>
     </header>
 
-    <main class="page-main contacts">
-      <h1 class="contacts__title">Контакты</h1>
+    <main class="page-main">
+      <div class="contacts">
+        <h1 class="contacts__title">Контакты</h1>
 
-      <div class="contacts__container">
-        <ul class="contacts__list">
-          <li class="contacts__item">
-            <p class="contacts__item-text contacts__item-city">Новороссийск</p>
-            <p class="contacts__item-text"><a class="contacts__item-link" href="tel:+79234650141">+7 (923) 465 – 01 – 41</a></p>
-            <p class="contacts__item-text"><a class="contacts__item-link" href="mailto:digitalPlanetNR@mail.ru">digitalPlanetNR@mail.ru</a></p>
-          </li>
-          <li class="contacts__item">
-            <p class="contacts__item-text contacts__item-city">Москва</p>
-            <p class="contacts__item-text"><a class="contacts__item-link" href="tel:+74958552419">+7 (495) 855 – 24 – 19</a></p>
-            <p class="contacts__item-text"><a class="contacts__item-link" href="mailto:digitalPlanetMoscow@mail.ru">digitalPlanetMoscow@mail.ru</a></p>
-          </li>
-          <li class="contacts__item">
-            <p class="contacts__item-text contacts__item-city">Саратов</p>
-            <p class="contacts__item-text"><a class="contacts__item-link" href="tel:+79422212178">+7 (942) 221 – 21 – 78</a></p>
-            <p class="contacts__item-text"><a class="contacts__item-link" href="mailto:digitalPlanetSaratov@mail.ru">digitalPlanetSaratov@mail.ru</a></p>
-          </li>
-        </ul>
+        <div class="contacts__container">
+          <ul class="contacts__list">
+            <li class="contacts__item">
+              <p class="contacts__item-text contacts__item-city">Новороссийск</p>
+              <p class="contacts__item-text"><a class="contacts__item-link" href="tel:+79234650141">+7 (923) 465 – 01 – 41</a></p>
+              <p class="contacts__item-text"><a class="contacts__item-link" href="mailto:digitalPlanetNR@mail.ru">digitalPlanetNR@mail.ru</a></p>
+            </li>
+            <li class="contacts__item">
+              <p class="contacts__item-text contacts__item-city">Москва</p>
+              <p class="contacts__item-text"><a class="contacts__item-link" href="tel:+74958552419">+7 (495) 855 – 24 – 19</a></p>
+              <p class="contacts__item-text"><a class="contacts__item-link" href="mailto:digitalPlanetMoscow@mail.ru">digitalPlanetMoscow@mail.ru</a></p>
+            </li>
+            <li class="contacts__item">
+              <p class="contacts__item-text contacts__item-city">Саратов</p>
+              <p class="contacts__item-text"><a class="contacts__item-link" href="tel:+79422212178">+7 (942) 221 – 21 – 78</a></p>
+              <p class="contacts__item-text"><a class="contacts__item-link" href="mailto:digitalPlanetSaratov@mail.ru">digitalPlanetSaratov@mail.ru</a></p>
+            </li>
+          </ul>
 
-        <div class="contacts__column-right">
-          <form class="contacts__form">
-            <p class="contacts__form-title">Остались вопросы? Задайте их нам!</p>
-            <p class="contacts__form-text">Мы обязательно свяжемся с вами в течение двух рабочих дней</p>
+          <div class="contacts__column-right">
+            <form class="contacts__form">
+              <p class="contacts__form-title">Остались вопросы? Задайте их нам!</p>
+              <p class="contacts__form-text">Мы обязательно свяжемся с вами в течение двух рабочих дней</p>
 
-            <div class="contacts__form-container">
-              <label for="name" class="visually-hidden">Ваше имя</label>
-              <input id="name" type="text" name="name" placeholder="Ваше имя" required>
+              <div class="contacts__form-container">
+                <label for="name" class="visually-hidden">Ваше имя</label>
+                <input id="name" type="text" name="name" placeholder="Ваше имя" required>
 
-              <label for="mail" class="visually-hidden">Ваше e-mail</label>
-              <input id="mail" type="email" name="mail" placeholder="Ваше e-mail" pattern="/[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2, 3}$/" required>
+                <label for="mail" class="visually-hidden">Ваше e-mail</label>
+                <input id="mail" type="email" name="mail" placeholder="Ваше e-mail" pattern="/[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2, 3}$/" required>
 
-              <label for="question" class="visually-hidden">Что вас интересует?</label>
-              <textarea id="question" name="question" placeholder="Что вас интересует?" required></textarea>
-              <button class="button contacts__form-button" type="submit">Отправить</button>
-            </div>
-          </form>
+                <label for="question" class="visually-hidden">Что вас интересует?</label>
+                <textarea id="question" name="question" placeholder="Что вас интересует?" required></textarea>
+                <button class="button contacts__form-button" type="submit">Отправить</button>
+              </div>
+            </form>
+          </div>
         </div>
-      </div>
 
+      </div>
     </main>
 
     <footer class="page-footer page-footer--contacts">
